--- a/my-forum/src/main/resources/application.properties
+++ b/my-forum/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.datasource.url=jdbc:h2:file:./forum-db
+spring.datasource.username=username
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
