Added spring security configuration (jwt) and api for register (/auth/signup) and login purposes (/auth/signin)

--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+#H2 settings
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 spring.datasource.url=jdbc:h2:file:./forum-db
 spring.datasource.username=username
 spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
+
+#token attributes
+pl.lukasz94w.jwtSecret = lukasz94wsecretkey
+pl.lukasz94w.jwtExpirationTimeInMs = 60000
