--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #H2 settings
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
-spring.datasource.url=jdbc:h2:file:./forum-db
+spring.datasource.url=jdbc:h2:file:./forum-db2
 spring.datasource.username=username
 spring.datasource.password=password
 spring.h2.console.enabled=true
