--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -3,8 +3,19 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 spring.datasource.url=jdbc:h2:file:./forum-db2
 spring.datasource.username=username
 spring.datasource.password=password
+
+#test
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
+
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#spring.jpa.properties.hibernate.generate_statistics=true
+#logging.level.org.hibernate.SQL = debug
 
 #token attributes
 pl.lukasz94w.jwtSecret = lukasz94wsecretkey
