Changes in countTopicsAndPostByCategory API: now instead of deleted Summary class there is sent map which f.e. contains list of LastActivities. New UserController which API allows uploading optional User avatar image (called ProfilePic). An ImageUploadExceptionAdvice class has been created to validate the size of the uploaded image (max 0.2Mb).

--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -4,20 +4,17 @@ spring.datasource.url=jdbc:h2:file:./forum-db2
 spring.datasource.username=username
 spring.datasource.password=password
 
-#test
+#enable H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
 
+#show hibernate commands
 spring.jpa.show-sql=true
-##spring.jpa.properties.hibernate.format_sql=true
-
-
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-#spring.jpa.properties.hibernate.generate_statistics=true
-#logging.level.org.hibernate.SQL = debug
 
 #token attributes
 pl.lukasz94w.jwtSecret = lukasz94wsecretkey
 pl.lukasz94w.jwtExpirationTimeInMs = 300000
+
+#maximum image upload size
+spring.servlet.multipart.max-file-size = 200KB
+spring.servlet.multipart.max-request-size = 200KB
