API for changing user password. First which send mail (via MailService) with reset token - PasswordToken is a class which stores sent token. Second API allows changing password (password is sent as ChangePasswordThroughEmail object)

--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -1,3 +1,24 @@
+#token attributes
+pl.lukasz94w.jwtSecret = lukasz94wsecretkey
+pl.lukasz94w.jwtExpirationTimeInMs = 300000
+
+#maximum image upload size
+spring.servlet.multipart.max-file-size = 200KB
+spring.servlet.multipart.max-request-size = 200KB
+
+#mail client settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=myforumspringangular@gmail.com
+spring.mail.password=mycust0mp4ssword
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
 #H2 settings
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 spring.datasource.url=jdbc:h2:file:./forum-db2
@@ -10,11 +31,3 @@ spring.h2.console.path=/console
 
 #show hibernate commands
 spring.jpa.show-sql=true
-
-#token attributes
-pl.lukasz94w.jwtSecret = lukasz94wsecretkey
-pl.lukasz94w.jwtExpirationTimeInMs = 300000
-
-#maximum image upload size
-spring.servlet.multipart.max-file-size = 200KB
-spring.servlet.multipart.max-request-size = 200KB
