Move authorization service to dedicated AuthService class. Delete UserNotFoundException - instead using provided by Spring UsernameNotFoundException

--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 pl.lukasz94w.jwtSecret = lukasz94wsecretkey
 pl.lukasz94w.jwtExpirationTimeInMs = 300000
 
+#token
+pl.lukasz94w.serverAddress = http://localhost:4200
+
 #maximum image upload size
 spring.servlet.multipart.max-file-size = 200KB
 spring.servlet.multipart.max-request-size = 200KB
