API for activating account via token sent on email (ActivateToken). Possibility of resend expired activation token also the same with password reset token (PasswordToken)

--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#token attributes
+#jwt authorization token attributes
 pl.lukasz94w.jwtSecret = lukasz94wsecretkey
 pl.lukasz94w.jwtExpirationTimeInMs = 300000
 
-#token
+#server address
 pl.lukasz94w.serverAddress = http://localhost:4200
 
 #maximum image upload size
@@ -24,7 +24,7 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 #H2 settings
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
-spring.datasource.url=jdbc:h2:file:./forum-db2
+spring.datasource.url=jdbc:h2:file:./forum-new
 spring.datasource.username=username
 spring.datasource.password=password
 
