Implement refresh token functionality

--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #jwt authorization token attributes
 pl.lukasz94w.jwtSecret = lukasz94wsecretkey
-pl.lukasz94w.jwtExpirationTimeInMs = 300000
+pl.lukasz94w.jwtAccessTokenExpirationTimeInMs = 5000
+pl.lukasz94w.jwtRefreshTokenExpirationTimeInMs= 90000
 
 #server address
 pl.lukasz94w.serverAddress = http://localhost:4200
