API for banning and unbanning forum users

--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #jwt authorization token attributes
 pl.lukasz94w.jwtSecret = lukasz94wsecretkey
 pl.lukasz94w.jwtAccessTokenExpirationTimeInMs = 30000
-pl.lukasz94w.jwtRefreshTokenExpirationTimeInMs= 90000
+pl.lukasz94w.jwtRefreshTokenExpirationTimeInMs= 18000000
 
 #server address
 pl.lukasz94w.serverAddress = http://localhost:4200
