Further works on finishing application f.e. move cors configuration to dedicated class or introduce global variable pl.lukasz.pageableItemsNumber (in application.properties)

--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -1,37 +1,42 @@
 #jwt authorization token attributes
 pl.lukasz94w.jwtSecret = lukasz94wsecretkey
 pl.lukasz94w.jwtAccessTokenExpirationTimeInMs = 30000
-pl.lukasz94w.jwtRefreshTokenExpirationTimeInMs= 18000000
+pl.lukasz94w.jwtRefreshTokenExpirationTimeInMs = 18000000
 
 #server address
 pl.lukasz94w.serverAddress = http://localhost:4200
 
+#number of pageable items
+pl.lukasz94w.pageableItemsNumber = 10
+
 #maximum image upload size
-spring.servlet.multipart.max-file-size = 200KB
-spring.servlet.multipart.max-request-size = 200KB
+#in the frontend, the limit set when loading the file is 200KB, but the algorithms
+#can increase the size, so here with a certain margin the limit was set to 350KB
+spring.servlet.multipart.max-file-size = 350KB
+spring.servlet.multipart.max-request-size = 350KB
 
 #mail client settings
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=myforumspringangular@gmail.com
-spring.mail.password=mycust0mp4ssword
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = myforumspringangular@gmail.com
+spring.mail.password = mycust0mp4ssword
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.ssl.trust = smtp.gmail.com
+spring.mail.properties.mail.smtp.connectiontimeout = 5000
+spring.mail.properties.mail.smtp.timeout = 5000
+spring.mail.properties.mail.smtp.writetimeout = 5000
 
 #H2 settings
-spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
-spring.datasource.url=jdbc:h2:file:./forum-new
-spring.datasource.username=username
-spring.datasource.password=password
+spring.jpa.properties.hibernate.hbm2ddl.auto = create-drop
+spring.datasource.url = jdbc:h2:file:./forum-new
+spring.datasource.username = username
+spring.datasource.password = password
 
 #enable H2 console
-spring.h2.console.enabled=true
-spring.h2.console.path=/console
+spring.h2.console.enabled = true
+spring.h2.console.path = /console
 
 #show hibernate commands
-spring.jpa.show-sql=true
+spring.jpa.show-sql = true
