--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -28,15 +28,18 @@ spring.mail.properties.mail.smtp.connectiontimeout = 5000
 spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
 
-#H2 settings
-spring.jpa.properties.hibernate.hbm2ddl.auto = create-drop
-spring.datasource.url = jdbc:h2:file:./forum-new
-spring.datasource.username = username
-spring.datasource.password = password
+#postgresql settings
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = 123
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.sql.init.mode = always
+spring.jpa.defer-datasource-initialization = true
+spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor = org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
 
-#enable H2 console
-spring.h2.console.enabled = true
-spring.h2.console.path = /console
-
-#show hibernate commands
+#show hibernate commands settings
 spring.jpa.show-sql = true
+logging.level.org.hibernate.SQL = DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
