--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -39,7 +39,5 @@ spring.sql.init.mode = always
 spring.jpa.defer-datasource-initialization = true
 spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor = org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
 
-#show hibernate commands settings
+#show hibernate commands
 spring.jpa.show-sql = true
-logging.level.org.hibernate.SQL = DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
