--- a/my-forum-backend/src/main/resources/application.properties
+++ b/my-forum-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#jwt authorization token attributes
+#jwt authorization token attributes (access token validity - 1 hour, refresh token validity - 24 hours)
 pl.lukasz94w.jwtSecret = lukasz94wsecretkey
-pl.lukasz94w.jwtAccessTokenExpirationTimeInMs = 30000
-pl.lukasz94w.jwtRefreshTokenExpirationTimeInMs = 18000000
+pl.lukasz94w.jwtAccessTokenExpirationTimeInMs = 3600000
+pl.lukasz94w.jwtRefreshTokenExpirationTimeInMs = 86400000
 
 #server address
 pl.lukasz94w.serverAddress = http://localhost:4200
