Dockerfile which allows to create docker image of Spring Boot application (using 'docker build' cmd). Dockerfile to assemble image which consists aforementioned image of application and PostgreSQL database (using 'docker-compose' cmd). New BanResponse class which extends ErrorResponse

--- a/my-forum-backend/pom.xml
+++ b/my-forum-backend/pom.xml
@@ -94,6 +94,9 @@
     </dependencies>
 
     <build>
+        <finalName>
+            my-forum-backend
+        </finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
